[package]
name = "dynamic-protobuf"
version = "0.1.0"
authors = ["Sascha Wise <me@saschawise.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
dynamic = { path = "../dynamic" }
prost = "0.8"
prost-types = "0.8"
rustc-hash = "1.1"
thiserror = "1.0.11"
uuid = "0.8"
once_cell = "1.5"

[dev-dependencies]
test-protos = { path = "../test-protos" }
