[package]
name = "dynamic"
version = "0.1.0"
authors = ["Sascha Wise <me@saschawise.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
smol_str = "0.1"
thiserror = "1"

[dev-dependencies]
dynamic-derive = { path = "../dynamic-derive" }
