[package]
name = "looking-glass-protobuf"
version = "0.1.1"
authors = ["Sascha Wise <me@saschawise.com>"]
edition = "2021"
license = "MIT"
description = "looking-glass-protobuf is a Protobuf reflection library built on looking-glass and Prost"
repository = "https://github.com/m10io/looking-glass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
looking-glass = { version = "0.1.0", path = "../looking-glass" }
prost = "0.8"
prost-types = "0.8"
rustc-hash = "1.1"
thiserror = "1.0.11"
uuid = "0.8"
once_cell = "1.5"

[dev-dependencies]
test-protos = { path = "../test-protos" }
